--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: Check Specific Reviewer Approval
-on:  workflow_dispatch
+on:  
+  pull_request_review:
+    types: submitted
 jobs:
   check-approval:
     runs-on: ubuntu-latest
