--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,16 @@
-name: Check Specific Reviewer Approval
-on:  workflow_dispatch
+name: PR Approval Workflow
+
+on:
+  pull_request_review:
+    types: [submitted]
+
 jobs:
   check-approval:
     runs-on: ubuntu-latest
+    if: github.event.review.state == 'approved'
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3 # Необходимо для доступа к файлам репозитория
-    
-      - name: Read script from file
-        id: read_script
-        run: |
-          echo "script<<EOF" >> $GITHUB_ENV
-          cat scripts/approval-check.js >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
-    
-      - name: Check Approval
-        id: check_approval
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: ${{ env.script }}
-      
-      - name: Step for Approval True
-        if: steps.check_approval.outputs.approved == 'true'
-        run: echo "Approved! Running steps for approved status..."
-      
-      - name: Step for Approval False
-        if: steps.check_approval.outputs.approved == 'false'
-        run: echo "Not approved. Running steps for not approved status..."
+        uses: actions/checkout@v3
+
+      - name: Print Approval Message
+        run: echo "Pull Request has been approved!"
